# zfp-wasm-bug

./: Cargo.toml
.github/workflows/: test.yml
src/: lib.rs
zfp/: Cargo.toml
zfp-sys/zfp/: CHANGELOG.md
zfp-sys/zfp/.github/workflows/: coverage.yml  tests.yml
zfp-sys/zfp/docs/source/: faq.rst  high-level-api.rst
zfp-sys/zfp/src/: zfp.c
zfp-sys/zfp/src/template/: utils.c
zfp-sys/zfp/tests/src/inline/: testBitstream.c  testBitstreamSmallWsize.c  testBitstreamStrided.c
zfp/src/: ffi.rs  lib.rs
